training the model

--- a/index.ipynb
+++ b/index.ipynb
@@ -5445,7 +5445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -5491,7 +5491,7 @@
        "Name: Share, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5502,7 +5502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -5511,7 +5511,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5541,7 +5541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -5590,7 +5590,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5602,7 +5602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5708,7 +5708,7 @@
        "[2042 rows x 2 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5719,7 +5719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -6056,7 +6056,7 @@
        "14009         Gary Leonard  0.0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6067,7 +6067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6084,7 +6084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -6098,7 +6098,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6110,16 +6110,327 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we'll take the numeric columns and remove 'Pts Won', 'Pts Max', 'Share' because these columns show easily what we're going to predict \n",
+    "# we'll take all the numeric columns and remove 'Pts Won', 'Pts Max', 'Share' because these columns show easily what we're going to predict \n",
     "predictors = ['Age', 'G', 'GS', 'MP', 'FG', 'FGA', 'FG%', '3P',\n",
     "       '3PA', '3P%', '2P', '2PA', '2P%', 'eFG%', 'FT', 'FTA', 'FT%', 'ORB',\n",
     "       'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS', 'Year',\n",
     "       'Pts Won', 'Pts Max', 'Share', 'W', 'L', 'W/L%', 'GB', 'PS/G',\n",
     "       'PA/G', 'SRS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = stats[stats[\"Year\"]<2021]\n",
+    "test = stats[stats[\"Year\"]==2021]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Ridge #linear regression model\n",
+    "# initialise the model\n",
+    "model = Ridge(alpha=.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fit the train data to the model\n",
+    "model.fit(train[predictors],train[\"Share\"])\n",
+    "# predict\n",
+    "predictions = model.predict(test[predictors])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>631</th>\n",
+       "      <td>0.000059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>632</th>\n",
+       "      <td>-0.000083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>633</th>\n",
+       "      <td>-0.000026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>634</th>\n",
+       "      <td>0.000059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>635</th>\n",
+       "      <td>0.000207</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     predictions\n",
+       "631     0.000059\n",
+       "632    -0.000083\n",
+       "633    -0.000026\n",
+       "634     0.000059\n",
+       "635     0.000207"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = pd.DataFrame(predictions, columns=['predictions'], index=test.index)\n",
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Share</th>\n",
+       "      <th>predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>631</th>\n",
+       "      <td>Aaron Gordon</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>632</th>\n",
+       "      <td>Austin Rivers</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>633</th>\n",
+       "      <td>Bol Bol</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>634</th>\n",
+       "      <td>Facundo Campazzo</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>635</th>\n",
+       "      <td>Greg Whittington</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000207</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Player  Share  predictions\n",
+       "631      Aaron Gordon    0.0     0.000059\n",
+       "632     Austin Rivers    0.0    -0.000083\n",
+       "633           Bol Bol    0.0    -0.000026\n",
+       "634  Facundo Campazzo    0.0     0.000059\n",
+       "635  Greg Whittington    0.0     0.000207"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compare our predictions to the actual data\n",
+    "combination = pd.concat([test[[\"Player\",\"Share\"]], predictions], axis=1)\n",
+    "combination.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Share</th>\n",
+       "      <th>predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>642</th>\n",
+       "      <td>Nikola Jokić</td>\n",
+       "      <td>0.961</td>\n",
+       "      <td>0.936452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8626</th>\n",
+       "      <td>Joel Embiid</td>\n",
+       "      <td>0.580</td>\n",
+       "      <td>0.565569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3652</th>\n",
+       "      <td>Stephen Curry</td>\n",
+       "      <td>0.449</td>\n",
+       "      <td>0.437433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9910</th>\n",
+       "      <td>Giannis Antetokounmpo</td>\n",
+       "      <td>0.345</td>\n",
+       "      <td>0.337022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1390</th>\n",
+       "      <td>Chris Paul</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>0.134324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11000</th>\n",
+       "      <td>Luka Dončić</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>0.041483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7465</th>\n",
+       "      <td>Damian Lillard</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.037198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3537</th>\n",
+       "      <td>Julius Randle</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.019375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3532</th>\n",
+       "      <td>Derrick Rose</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.009487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11362</th>\n",
+       "      <td>Rudy Gobert</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.008147</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Player  Share  predictions\n",
+       "642             Nikola Jokić  0.961     0.936452\n",
+       "8626             Joel Embiid  0.580     0.565569\n",
+       "3652           Stephen Curry  0.449     0.437433\n",
+       "9910   Giannis Antetokounmpo  0.345     0.337022\n",
+       "1390              Chris Paul  0.138     0.134324\n",
+       "11000            Luka Dončić  0.042     0.041483\n",
+       "7465          Damian Lillard  0.038     0.037198\n",
+       "3537           Julius Randle  0.020     0.019375\n",
+       "3532            Derrick Rose  0.010     0.009487\n",
+       "11362            Rudy Gobert  0.008     0.008147"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combination.sort_values(\"Share\", ascending= False).head(10)"
    ]
   }
  ],
